sites/navy/clusters/dal-navy-core-1/wave-2/overlays/argocd-ui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ui
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.kubernetes.io/hostname: argocd.navy.dalmura.cloud
spec:
  ingressClassName: ingress-private
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.navy.dalmura.cloud`)
      priority: 10
      services:
        - kind: Service
          name: argocd-server
          port: 443
    - kind: Rule
      match: Host(`argocd.navy.dalmura.cloud`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - kind: Service
          name: argocd-server
          port: 443
          scheme: h2c
  tls:
    secretName: argocd-cert
    domains:
      - main: argocd.navy.dalmura.cloud
